// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyse html > handle tags and import 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <link rel=\\"icon\\" href=\\"http://localhost:5002/favicon.ico\\" />
    <link rel=\\"stylesheet\\" href=\\"http://localhost:5002/assets/index-28fadf32.css\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <style>
      @import url('/a.css');
      body {
        background-image: url(\\"path/to/image.jpg\\");
      }
    </style>
  </head>

  <body>
    <script type=\\"module\\" src=\\"http://localhost:5002/src/main.js\\"></script>
    <script type=\\"module\\">
      import y from 'y'
import xx from 'http://localhost:5002/base/xx'
document.write(xx)
console.log(y)
    </script>
    <script>
      window.addEventListener('click', async () => {
        await import('http://localhost:5002/base/esm.js')
})
    </script>
  </body>
</html>
"
`;

exports[`analyse html > handle tags and import 2`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <link rel=\\"icon\\" href=\\"http://localhost:5002/favicon.ico\\" />
    <link rel=\\"stylesheet\\" href=\\"http://localhost:5002/assets/index-28fadf32.css\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <style>
      @import url('/a.css');
      body {
        background-image: url(\\"path/to/image.jpg\\");
      }
    </style>
  </head>

  <body>
    <script type=\\"module\\" src=\\"http://localhost:5002/src/main.js\\"></script>
    <script type=\\"module\\">
      import y from 'y'
import xx from 'http://localhost:5002/xx'
document.write(xx)
console.log(y)
    </script>
    <script>
      window.addEventListener('click', async () => {
        await import('http://localhost:5002/esm.js')
})
    </script>
  </body>
</html>
"
`;

exports[`analyse html > handle url in inline style 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <link rel=\\"icon\\" href=\\"/favicon.ico\\" />
    <link rel=\\"stylesheet\\" href=\\"/assets/index-28fadf32.css\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <style>
      @import url('http://localhost:5002/a.css');
      body {
        background-image: url('http://localhost:5002/base/path/to/image.jpg');
      }
    </style>
  </head>

  <body>
    <script type=\\"module\\" src=\\"/src/main.js\\"></script>
    <script type=\\"module\\">
      import y from 'y'
import xx from './xx'
document.write(xx)
console.log(y)
    </script>
    <script>
      window.addEventListener('click', async () => {
        await import('./esm.js')
})
    </script>
  </body>
</html>
"
`;

exports[`analyse html > handle url in inline style 2`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <link rel=\\"icon\\" href=\\"/favicon.ico\\" />
    <link rel=\\"stylesheet\\" href=\\"/assets/index-28fadf32.css\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <style>
      @import url('http://localhost:5002/a.css');
      body {
        background-image: url('http://localhost:5002/path/to/image.jpg');
      }
    </style>
  </head>

  <body>
    <script type=\\"module\\" src=\\"/src/main.js\\"></script>
    <script type=\\"module\\">
      import y from 'y'
import xx from './xx'
document.write(xx)
console.log(y)
    </script>
    <script>
      window.addEventListener('click', async () => {
        await import('./esm.js')
})
    </script>
  </body>
</html>
"
`;
